test/zinc_source/compile_errors/control_flow/09_compound_assignment_requires_existing_variable.zn
// expected-error: operator '\+=' requires existing variable 'x'

fn main() {
    x += 1
}
